
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int recvBuff ;


 int connect_to_server (char*) ;
 int exit (int) ;
 int printf (char*,...) ;
 int read (int,char*,int) ;
 int strlen (char*) ;
 scalar_t__ strstr (char*,char*) ;
 int write (int,char*,int ) ;

int main(int argc, char *argv[])
{
    int n = 0;
    int sockfd;
    char recvBuff[1024];


    char request[] = "GET / HTTP/1.0\r\n\r\n";


    char request1[] = "GET / HTTP/1.1\r\nHost: stuff\r\nRange: bytes=0-18446744073709551615\r\n\r\n";


    if(argc != 2)
    {
        printf("\n Usage: %s <ip of server> \n",argv[0]);
        return 1;
    }

    printf("[*] Audit Started\n");
    sockfd = connect_to_server(argv[1]);
    write(sockfd, request, strlen(request));
    read(sockfd, recvBuff, sizeof(recvBuff)-1);

    if (!strstr(recvBuff,"Microsoft"))
    {
  printf("[*] NOT IIS\n");
  exit(1);
    }

    sockfd = connect_to_server(argv[1]);
    write(sockfd, request1, strlen(request1));
    read(sockfd, recvBuff, sizeof(recvBuff)-1);
    if (strstr(recvBuff,"Requested Range Not Satisfiable"))
    {
                printf("[!!] Looks VULN\n");
                exit(1);
    } else if(strstr(recvBuff,"The request has an invalid header name")) {
 printf("[*] Looks Patched");
} else
 printf("[*] Unexpected response, cannot discern patch status");




}
